# copier-boilerplate

./: README.md  copier.yml  pyproject.toml  requirements.txt
template/: .copier-answers.yml.jinja  .gitignore  README.md  boilerplate_update.sh  pyproject.toml  pyproject.toml.jinja  requirements.txt
template/main/: apps.py  settings.py  urls.py  views.py
template/{{ project_slug }}/: asgi.py.jinja  settings.py.jinja  urls.py.jinja  wsgi.py
